syntax = "proto3"; // Protocol Buffers version

option csharp_namespace = "PlatformService"; // Namespace for C# code

service GrpcPlatform {
    rpc GetAllPlatform(GetAllRequest) returns (PlatformResponse); // Get all platforms
}

message GetAllRequest {} // Empty request

message GrpcPlatformModel { // Platform model
    int32 id = 1;
    string name = 2;
    string publisher = 3;
    string cost = 4;
}

message PlatformResponse { // Response
    repeated GrpcPlatformModel platforms = 1;
}